# SpecMiners.py

./: .travis.yml  Dockerfile  MANIFEST.in  README.md  requirements.dev.txt  setup.cfg  setup.py
docker/: Dockerfile  Dockerfile.daikon  Makefile
example/: example.py
specminers/: __init__.py  daikon.py
src/specminers/: __init__.py  daikon.py  docker_tool.py  tool.py
src/specminers/daikon/: __init__.py  daikon.py  declarations.py  helpers.py  invariant.py  loader.py  ppt.py  trace.py  vardecl.py
src/specminers/daikon/trace/: __init__.py  reader.py  record.py  writer.py
test/: test_daikon.py
test/examples/: ardu.decls  ardu.inv
