[metadata]
name = specminers
author = Christopher Timperley
author-email = christimperley@googlemail.com
description-file = README.md
license-file = LICENSE
url = https://github.com/ChrisTimperley/SpecMiners.py
keywords = daikon, texada, invariants, analysis, specification
classifiers =
  Natural Language :: English
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7

[pycodestyle]
ignore = W605
max_line_length = 79

[mypy]
ignore_missing_imports = True
