[metadata]
name = specminers
author = Christopher Timperley
author-email = christimperley@googlemail.com
description-file = README.md
license-file = LICENSE
url = https://github.com/ChrisTimperley/SpecMiners.py
keywords = daikon, texada, invariants, analysis, specification
classifiers =
  Natural Language :: English
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7

[options]
include_package_data = True
python_requires = >= 3.6
install_requires =
  attrs ~= 19.3.0
  docker ~= 4.1.0
  loguru ~= 0.4.1
package_dir =
  =src
packages = find:

[aliases]
test = pytest

[options.packages.find]
where = src

[options.extras_require]
test =
  pytest ~= 5.2.1

[pycodestyle]
ignore = W605
max_line_length = 79

[mypy]
ignore_missing_imports = True
